@@ -3,7 +3,6 @@
   <requires>
     <import addon="xbmc.python" version="2.24.0"/>
     <import addon="script.module.requests" version="2.12.4"/>
-    <import addon="script.module.shutil_which" version="3.5.1"/>
     <import addon="script.module.futures" version="2.2.0"/>
     <import addon="script.module.singledispatch" version="3.4.0.3"/>
     <import addon="script.module.streamlink.crypto" version="1.1.0"/>
@@ -24,6 +23,7 @@
 + 2017.09.20
 - Fixes for ordered dict import for Kodi 16
 - Rebased on upstream 0.8.1 release
+- Removed dependency for shutil_which
 
 + 2017.09.06
 - Fixes for relative imports
