@@ -42,7 +42,7 @@ except ImportError:
 try:
     from shutil import which
 except ImportError:
-    from shutil_which.shutil_which import which
+    from streamlink.utils.shutil_which import which
 
 
 __all__ = ["is_py2", "is_py3", "is_py33", "is_win32", "str", "bytes",
